# camconnect

./: .gitignore  CONTRIBUTING.md  README.md  build-instructions.md  build.py  setup.iss  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
camconnect/: .gitignore  README.md  pubspec.yaml
camconnect-desktop/: README.md  pubspec.yaml
camconnect-desktop/android/app/: build.gradle
camconnect-desktop/ios/Runner/: Info.plist
camconnect-desktop/lib/: main.dart
camconnect-desktop/lib/comps/: connection_panel.dart  connection_variables.dart  connection_widget.dart  devices_manager.dart
camconnect-desktop/lib/utils/: broadcast_listener.dart  client.dart  connection_manager.dart  preferences.dart  request_names.dart  requester.dart  resolution_presets.dart  signaling.dart  task_executer.dart
camconnect-desktop/lib/widgets/: conditional_widget.dart  devices_widget.dart  editable_text_box.dart  overlay_entry_creator.dart  resolution_presets_dialog.dart  rotating_widget.dart  snack_bars.dart  status_widgets.dart
camconnect-desktop/macos/Runner.xcodeproj/: project.pbxproj
camconnect-desktop/test/: requester_test.dart
camconnect-desktop/web/: index.html
camconnect-desktop/windows/runner/: Runner.rc
camconnect-driver/: README.md  camconnect.inf  camconnect.rc  camconnect.sln  camconnect.vcxproj  camconnect.vcxproj.Filters
camconnect-driver-interface/: .gitignore  DriverInterface.sln  DriverInterface.vcxproj  DriverInterface.vcxproj.filters  LICENSE  README.md
camconnect-driver-interface/source/: common.h  device.cpp  device.h  device_enumerator.cpp  device_enumerator.h  driver_interface.cpp
camconnect-driver/example/: CREDIT  ExampleApp.sln
camconnect-driver/example/DriverInterface/: DriverInterface.vcxproj  DriverInterface.vcxproj.filters
camconnect-driver/example/DriverInterfaceWrapper/: DriverInterface.cs  DriverInterfaceWrapper.csproj  Native.cs
camconnect-driver/example/UserDriverStaticImage/: Program.cs  UserDriverStaticImage.csproj
camconnect-driver/source/: capture.cpp  common.h  device.cpp  filter.cpp  filter.h  hwsim.cpp  hwsim.h  image.cpp  image.h  purecall.c
camconnect-third_party/flutter-webrtc/windows/: CMakeLists.txt
camconnect/android/app/: build.gradle
camconnect/ios/Runner/: Info.plist
camconnect/ios/Runner.xcodeproj/: project.pbxproj
camconnect/lib/: main.dart
camconnect/lib/pages/: camera_page.dart  home_page.dart  settings_page.dart
camconnect/lib/utils/: broadcaster.dart  connection_manager.dart  orientation_manager.dart  preferences.dart  request_handler.dart  request_names.dart  server.dart  settings_manager.dart  signaling.dart
camconnect/linux/: CMakeLists.txt  my_application.cc
camconnect/test/: request_handler_test.dart
camconnect/web/: index.html  manifest.json
camconnect/windows/: CMakeLists.txt
(+30 files in other folders)
